<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Daily Words</string>
    <string name="losungen">Daily Words</string>
    <string name="monthly_verses">Weekly / Monthly Verses</string>
    <string name="favorite_verses">Favorite Verses</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate App</string>
    <string name="send_feedback_bug">Send feedback / bug</string>
    <string name="info_help">Info / Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_settings">Settings</string>
    <string name="send_mail">Send E-Mail</string>
    <string name="old_testament_card_title">Old Testament</string>
    <string name="new_testament_card_title">New Testament</string>
    <string name="no_verses_found">No data available for this date</string>
    <string name="import_new_data">Add new verses</string>
    <string name="monthly_verse_title">Monthly verse</string>
    <string name="choose_language">Choose language</string>
    <string name="copyright_import">By clicking \'%1$s\' you accept the terms and conditions under: %2$s</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="import_">Import</string>
    <string name="try_again">Try Again</string>
    <string name="error_loading_data_check_connection">Error loading data. Please check your internet connection</string>
    <string name="downloading_file">Downloading file %1$d of %2$d</string>
    <string name="uncompressing_file">Extracting file %1$d of %2$d</string>
    <string name="importing_file">Importing file %1$d of %2$d</string>
    <string name="choose_date">Choose date</string>
    <string name="share">Share</string>
    <string name="old_new_testament_title">Old and new testament</string>
    <string name="mark_as_favorite">Mark as favorite</string>
    <string name="markes_verses_will_be_here">Marked verses will be displayed here</string>
    <string name="open_verse_external">Open verse external</string>
    <string name="could_not_parse_verse">Could not parse verse</string>
    <string name="remember_my_decision">remember my decision</string>
    <string name="delete_open_external_default_value">Click to delete default value for opening verse in external program</string>
    <string name="successful">successful</string>
    <string name="weekly_verse">Weekly verse</string>
    <string name="title_activity_app_widget">Widget Settings</string>
    <string name="widget_is_loading">Widget is loading…</string>
    <string name="widget_content">Widget content</string>
    <string name="font_size">Font size</string>
    <string name="text_color">Text color</string>
    <string name="background_color">Background color</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="show_notification">Show notifications</string>
    <string name="show_notification_of_daily_word">Show a notification with the daily word every day</string>
    <string name="notifications">Notifications</string>
    <string name="external_program">External program</string>
    <string name="notification_content">Notification content</string>
    <string name="time_notification">Time to show notification</string>
    <string name="daily_word_notification_channel_name">Daily notification</string>
    <string name="daily_word_notification_channel_description">Shows the daily word every day as a notification</string>
    <string name="daily_word">Daily Word</string>
    <string name="marked_as_favourite">Marked as favourite</string>
    <string name="no_sermon_found">No sermon found for this date</string>
    <string name="could_not_parse_date_of_rss">Could not parse date of rss entry</string>
    <string name="play_sermon">Play sermon</string>
    <string name="stop_sermon">Stop sermon</string>
    <string name="media_player_notification_channel_id">Media player controls</string>
    <string name="media_player_notification_channel_description">Notification to control the sermon</string>
    <string name="sermon_provider_notification_channel_id">Download progress</string>
    <string name="sermon_provider_notification_channel_description">Shows the progress of the downloaded sermon</string>
    <string name="searching_sermon">Searching sermon</string>
    <string name="downloading_sermon">Downloading sermon</string>
    <string name="error_downloading_sermon">Error while downloading sermon</string>
    <string name="aborted_by_user">Aborted by user</string>
    <string name="share_sermon">Share sermon</string>
    <string name="loading_sermon">Loading sermon</string>
    <string name="app_info">App info</string>
    <string name="app_version">App version: %1$d</string>
    <string name="licences">Licenses</string>
    <string name="want_to_support">You want to support the app?</string>
    <string name="help_translating">This app ist available in various languages. You can help to translate the app into more. Click here to start.</string>
    <string name="help_developing">This app is open source and developed in my free time. When you can program you are welcome to contribute. Just click here.</string>
    <string name="playing_sermon">Playing sermon</string>
    <string name="sermons">Sermons</string>
    <string name="auto_delete_sermons">Delete sermons automatically</string>
    <string name="auto_delete_sermons_description">Delete audio files after x days (0 to deactivate)</string>
    <string name="only_numbers_allowed">Only numbers are allowed</string>
    <string name="delete_sermons">Delete sermons</string>
    <string name="delete_sermons_description">You can choose which sermons</string>
    <string name="notes">Notes</string>
    <string name="add_notes">Add notes</string>
    <string name="search_verses">Search verses</string>
    <string name="customization">Customization</string>
    <string name="choose_style">Choose style</string>

    <string name="ads_and_statistics">Ads and statistics</string>
    <string name="show_ads">Show ad banner</string>
    <string name="show_ads_description">When you want to support this APP you can activate a small banner at the bottom of the Screen</string>
    <string name="send_statistics">Send anonymous statistics</string>
    <string name="migrating_database">Migrating database</string>
    <string name="migrating_preferences">Migrating preferences</string>
    <string name="legacy_migrating_info">This update requires a migration of all data. This can take a few minutes. Please do not close the App.</string>
    <string name="legacy_migrating_info_features">For technical reasons you have to recreate all widgets on your start screen. A lot of bugs like notifications are fixed now.</string>
    <string name="finish">finish</string>
    <string name="download_and_play_sermon">Download and play sermon</string>
    <string name="app_intro">App intro</string>
    <string name="remember_gods_word">Be reminded of God\'s word every day</string>
    <string name="can_be_changed_in_the_settings">Can be changed in the settings</string>
    <string name="activate_notifications">Activate notifications</string>
    <string name="widgets">Widgets</string>
    <string name="widgets_personalized">Personalized color, size, text, …</string>
    <string name="ads">Advertising</string>
    <string name="no_mp3_found">Audio file not found on website</string>
    <string name="error_downloading_site_of_sermon">Error while downloading website of sermon</string>
    <string name="could_not_get_sermon_list">Could not get list of sermons</string>
    <string name="toggle_notes">Show / hide notes</string>
    <string name="show_notes">Show notes</string>
    <string name="show_notes_description">Show notes in monthly, weekly, search and favourite screen</string>
    <string name="choose_widget_style">Choose widget style</string>
    <string name="contributors">Contributors: %1$s</string>
    <string name="daily_word_from">Daily verse from %1$s</string>
    <string name="migrating_time_zone">Migrating verses to work with different time zones</string>
    <string name="migrating_daily_verses">Migrating daily verses</string>
    <string name="migrating_weekly_verses">Migrating weekly verses</string>
    <string name="migrating_monthly_verses">Migrating monthly verses</string>
    <string name="no_widgets_created_create_one_on_your_homescreen">You have not created any widgets. When you create a widget on your homescreen it will appear here.</string>
</resources>